new style added

--- a/scss/contact-section.scss
+++ b/scss/contact-section.scss
@@ -1,8 +1,5 @@
 .contact-section {
-    width: 1200px;
-    height: 867px;
-    flex-grow: 1;
-    flex-shrink: 1;
+    width: 100%;
     background-image: url(../images/contachbg.png);
     background-position: center;
     background-size: cover;
