--- a/scss/footer-section.scss
+++ b/scss/footer-section.scss
@@ -1,8 +1,5 @@
 .footer-section {
-    width: 1200px;
-    height: 90px;
-    flex-grow: 1;
-    flex-shrink: 1;
+    width: 100%;
     background-color: #262626;
     &__flex-container {
     	display: flex;
