--- a/scss/about-section.scss
+++ b/scss/about-section.scss
@@ -1,25 +1,41 @@
 .about-section {
-    width: 1200px;
-    height: 700px;
-    flex-grow: 1;
-    flex-shrink: 1;
-    background-image: url(../images/aboutbg.png);
+    width: 100%;
+    background-color: #00b1b1;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    padding-top: 70px;
+    padding-bottom: 70px;
+    padding-right: 50px;
+    padding-left: 50px;
     &__details {
-    	width: 500px;
-    	transform: translate(700px, 100px);
+        display: flex;
+        width: 100%;
+    	max-width: cacl(1200px - 500px);
+        flex-direction: column;
+        margin-left: 30px;
+    }
+    &__image {
+        display: flex;
+        width: 100%;
+        max-width: cacl(1200px - 540px);
+        margin-right: 30px;
+    }
+    &__img-fruits {
+        width: 100%;
     }
     &__details-h-two {
     	color: #ffffff;
-    	font-family: 'Raleway', sans-serif;
+    	font-family: 'ralewaybold';
     	font-size: 90px;
     	margin-bottom: 5px;
+        text-align: left;
     }
     &__details-paragraph {
     	color: #ffffff;
-    	font-family: sans-serif;
+    	font-family: 'ralewaylight';
+        text-align: left;
+        line-height: 25px;
     	font-size: 17px;
     }
 }
