--- a/scss/fresh-section.scss
+++ b/scss/fresh-section.scss
@@ -1,62 +1,65 @@
 .fresh-section {
-    width: 1200px;
-    flex-grow: 1;
-    flex-shrink: 1;
-    height: 1000px;
+    width: 100%;
     background-image: url(../images/freshbg.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    padding-right: 50px;
+    padding-left: 50px;
     &__menu {
-    	display: flex;
-    	justify-content: space-between;
-    	align-items: center;
-    	margin-top: 48px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 48px;
     }
-    &__menu-logo {
-    	
-    }
+    &__menu-logo {}
     &__menu-nav-link {
-    	color: #262626;
-    	font-size: 16px;
-    	font-family: 'Raleway', sans-serif;
-    	text-decoration: none;
-    	padding-top: 5px;
-    	padding-right: 10px;
-    	padding-left:10px;
-    	&:hover {
-    		border-top: 3px solid #ff6033;
-    	}
+        color: #262626;
+        font-size: 16px;
+        font-family: 'ralewaybold';
+        text-decoration: none;
+        padding-top: 3px;
+        margin-right: 10px;
+        margin-left: 10px;
+        &:hover {
+            border-top: 3px solid #ff6033;
+        }
     }
     &__details {
-    	margin-top: 260px;
+        margin-top: 260px;
     }
     &__details-h-two {
-    	color: #262626;
-    	font-size: 60px;
-    	font-family: 'Raleway', sans-serif;
-    	margin-bottom: 5px;
+        color: #262626;
+        font-size: 60px;
+        font-family: 'ralewayextrabold';
+        margin-bottom: 5px;
     }
     &__details-paragraph {
-    	width: 370px;
-    	color: #262626;
-    	font-size: 17px;
-    	font-family: sans-serif;
+        width: 370px;
+        color: #262626;
+        font-size: 17px;
+        font-family: 'ralewaylight';
+        margin-bottom: 15px;
     }
     &__details-button {
-    	width: 200px;
-    	height: 57px;
-    	color: #ffffff;
-    	background-color: #ff6033;
-    	font-family: 'Raleway', sans-serif;
-    	font-size: 20px;
-    	outline: none;
-    	border: none;
-    	&:hover {
-    		color: #ff6033;
-    		background-color: transparent;
-    		border: 2px solid #ff6033;
-    	}
+        width: 200px;
+        height: 57px;
+        color: #ffffff;
+        background-color: #ff6033;
+        font-family: 'ralewaylight';
+        font-size: 20px;
+        margin-top: 15px;
+        margin-bottom: 400px;
+        outline: none;
+        border: none;
+        -webkit-box-shadow: 1px 2px 24px -3px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 1px 2px 24px -3px rgba(0, 0, 0, 0.75);
+        box-shadow: 1px 2px 24px -3px rgba(0, 0, 0, 0.75);
+        &:hover {
+            color: #ff6033;
+            background-color: transparent;
+            border: 2px solid #ff6033;
+        }
     }
 }
 .active {
