--- a/scss/gallery-section.scss
+++ b/scss/gallery-section.scss
@@ -1,88 +1,187 @@
 .gallery-section {
-    width: 1200px;
-    height: 1536px;
-    flex-grow: 1;
-    flex-shrink: 1;
+    width: 100%;
     background-color: #ffe92f;
+    padding-top: 50px;
+    padding-bottom: 118px;
+    padding-right: 50px;
+    padding-left: 50px;
     &__details {
-    	width: 630px;
-    	height: 229px;
-    	margin: 0 auto;
+        width: 630px;
+        height: 229px;
+        margin: 0 auto;
     }
     &__details-h-two {
-    	color: #262626;
-    	font-family: 'Raleway', sans-serif;
-    	font-size: 90px;
-    	text-align: center;
-    	margin-bottom: 5px;
+        color: #262626;
+        font-family: 'ralewaybold';
+        font-size: 90px;
+        text-align: center;
+        margin-bottom: 5px;
     }
     &__details-paragraph {
-    	color: #262626;
-    	font-family: sans-serif;
-    	font-size: 17px;
-    	text-align: center;
+        color: #262626;
+        font-family: 'ralewaylight';
+        font-size: 17px;
+        text-align: center;
     }
     &__flex-container {
-    	display: flex;
-    	flex-basis: 1170px;
-    	height: 981px;
-    	flex-wrap: wrap;
-    	justify-content: center;
+        display: flex;
+        flex-basis: 100%;
+        max-width: 1170px;
+        flex-wrap: wrap;
     }
     &__flex-container-first-box {
-    	flex-basis: 770px;
-    	height: 552px;
-    	margin-right: 15px;
-    	background-image: url(../images/gallerpeaches.png);
+        display: flex;
+        flex-basis: 100%;
+        max-width: 585px;
+        height: 552px;
+        background-image: url(../images/gallerpeaches.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        margin: 15px;
+        -webkit-box-shadow: 1px 2px 24px -3px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 1px 2px 24px -3px rgba(0, 0, 0, 0.75);
+        box-shadow: 1px 2px 24px -3px rgba(0, 0, 0, 0.75);
     }
     &__flex-container-second-box {
-    	flex-basis: 370px;
-    	height: 552px;
-    	margin-left: 15px;
-    	&--first-square {
-    		flex-basis: 370px;
-    	    height: 262px;
-    	    margin-bottom: 28px;
-    		background-image: url(../images/gallarybaries.png);
-    	}
-    	&--second-square {
+        display: flex;
+        flex-wrap: wrap;
+        flex-basis: 370px;
+        max-width: cacl(1170px - 370px);
+        height: 552px;
+        margin: 15px;
+        &--first-square {
             flex-basis: 370px;
-    	    height: 262px;
-    	    margin-top: 28px;
-    		background-image: url(../images/gallery-toot.png);
-    	}
+            height: 262px;
+            margin-bottom: 15px;
+            background-image: url(../images/gallarybaries.png);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            -webkit-box-shadow: 1px 2px 24px -3px rgba(0, 0, 0, 0.75);
+            -moz-box-shadow: 1px 2px 24px -3px rgba(0, 0, 0, 0.75);
+            box-shadow: 1px 2px 24px -3px rgba(0, 0, 0, 0.75);
+        }
+        &--second-square {
+            flex-basis: 370px;
+            height: 262px;
+            margin-top: 15px;
+            background-image: url(../images/gallery-toot.png);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            -webkit-box-shadow: 1px 2px 24px -3px rgba(0, 0, 0, 0.75);
+            -moz-box-shadow: 1px 2px 24px -3px rgba(0, 0, 0, 0.75);
+            box-shadow: 1px 2px 24px -3px rgba(0, 0, 0, 0.75);
+        }
     }
     &__flex-container-third-box {
-    	flex-basis: 570px;
-    	height: 401px;
-    	margin-right: 15px;
-    	background-image: url(../images/gallery-glass.png);
+        width: 100%;
+        max-width: 450px;
+        height: 401px;
+        margin-right: 15px;
+        background-image: url(../images/gallery-glass.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        margin: 15px;
+        -webkit-box-shadow: 1px 2px 24px -3px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 1px 2px 24px -3px rgba(0, 0, 0, 0.75);
+        box-shadow: 1px 2px 24px -3px rgba(0, 0, 0, 0.75);
     }
     &__flex-container-forth-box {
-    	flex-basis: 570px;
-    	height: 401px;
-    	margin-left: 15px;
-    	background-image: url(../images/gallery-orange.png);
+        flex-basis: 100%;
+        max-width: 505px;
+        height: 401px;
+        margin: 15px;
+        background-image: url(../images/gallery-orange.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        -webkit-box-shadow: 1px 2px 24px -3px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 1px 2px 24px -3px rgba(0, 0, 0, 0.75);
+        box-shadow: 1px 2px 24px -3px rgba(0, 0, 0, 0.75);
     }
     &__div-for-button {
-    	width: 200px;
-    	height: 56px;
-    	margin: 0 auto;
+        width: 200px;
+        height: 56px;
+        margin: 0 auto;
     }
     &__button {
-    	width: 200px;
-    	height: 56px;
-    	color: #ffffff;
-    	background-color: #5585a2;
-    	font-family: 'Raleway', sans-serif;
-    	font-size: 20px;
-    	margin-top: 50px;
-    	border: none;
-    	outline: none;
-    	&:hover {
-    		color: #5585a2;
-    		background-color: transparent;
-    		border: 2px solid #5585a2;
-    	}
+        width: 200px;
+        height: 56px;
+        color: #ffffff;
+        background-color: #5585a2;
+        font-family: 'ralewaylight';
+        font-size: 20px;
+        margin-top: 50px;
+        border: none;
+        outline: none;
+        -webkit-box-shadow: 1px 2px 24px -3px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 1px 2px 24px -3px rgba(0, 0, 0, 0.75);
+        box-shadow: 1px 2px 24px -3px rgba(0, 0, 0, 0.75);
+        &:hover {
+            color: #5585a2;
+            background-color: transparent;
+            border: 2px solid #5585a2;
+        }
+    }
+}
+@media only screen and (min-device-width: 360px) and (max-device-width: 1024px) {
+    .gallery-section {
+        &__flex-container-first-box {
+            display: flex;
+            flex-basis: 100%;
+            max-width: 420px;
+            background-image: url(../images/gallerpeaches.png);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            margin: 15px;
+        }
+        &__flex-container-second-box {
+            display: flex;
+            flex-wrap: wrap;
+            flex-basis: 100%;
+            max-width: 370px;
+            height: 552px;
+            margin: 15px;
+            &--first-square {
+                flex-basis: 370px;
+                height: 262px;
+                margin-bottom: 15px;
+                background-image: url(../images/gallarybaries.png);
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center;
+            }
+            &--second-square {
+                flex-basis: 370px;
+                height: 262px;
+                margin-top: 15px;
+                background-image: url(../images/gallery-toot.png);
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center;
+            }
+        }
+        &__flex-container-third-box {
+            width: 100%;
+            max-width: 350px;
+            background-image: url(../images/gallery-glass.png);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            margin: 15px;
+        }
+        &__flex-container-forth-box {
+            flex-basis: 100%;
+            max-width: 440px;
+            margin: 15px;
+            background-image: url(../images/gallery-orange.png);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+        }
     }
 }
