--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,18 +12,49 @@
 @import 'contact-section';
 @import 'footer-section';
 
+@font-face {
+    font-family: 'ralewaybold';
+    src: url('../fonts/raleway-bold-webfont.woff2') format('woff2'),
+         url('../fonts/raleway-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'ralewayextrabold';
+    src: url('../fonts/raleway-extrabold-webfont.woff2') format('woff2'),
+         url('../fonts/raleway-extrabold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'ralewaylight';
+    src: url('../fonts/raleway-light-webfont.woff2') format('woff2'),
+         url('../fonts/raleway-light-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+.flex-container {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
 .container {
     width: 100%;
-    height: 100%;
-    max-width: 1300px;
+    max-width: 1149px;
     margin-right: auto;
     margin-left: auto;
     padding: 15px;
 }
-.flex-container {
+
+.fg-big-box {
     display: flex;
-    flex-wrap: wrap;
-    margin: 0 auto;
-    flext-basis: 1200px;
-    height: 6346px;
+    width: 100%;
+    justify-content: space-between;
 }
