--- a/scss/blog-section.scss
+++ b/scss/blog-section.scss
@@ -19,7 +19,7 @@
     &__details-text {
         color: #ffffff;
         font-family: 'ralewaylight';
-        font-weight: light;
+        line-height: 25px;
         font-size: 17px;
         text-align: center;
     }
