--- a/scss/gallery-section.scss
+++ b/scss/gallery-section.scss
@@ -21,6 +21,7 @@
         color: #262626;
         font-family: 'ralewaylight';
         font-size: 17px;
+        line-height: 25px;
         text-align: center;
     }
     &__flex-container {
