--- a/scss/subscribe-section.scss
+++ b/scss/subscribe-section.scss
@@ -17,13 +17,18 @@
         color: #262626;
         font-size: 40px;
         font-family: 'ralewaybold';
+        margin-bottom: 17px;
     }
     &__ditails-paragraph {
         color: #262626;
         font-size: 17px;
+        line-height: 25px;
+        margin-top: 17px;
         font-family: 'ralewaylight';
     }
-    &__form{   
+    &__form{ 
+    margin-top: 15px;
+    margin-bottom: 17px;  
     }
     
     &__email-input {
@@ -32,7 +37,6 @@
         color: #262626;
         font-family: 'ralewaylight';
         outline: none;
-        margin-top: 31px;
         padding-left: 15px;
         border: 1px solid #262626;
         margin-right: 15px;
